--- a/thinpad_top.srcs/sources_1/bd/meowrouter/ui/bd_c0078c9.ui
+++ b/thinpad_top.srcs/sources_1/bd/meowrouter/ui/bd_c0078c9.ui
@@ -1,31 +1,37 @@
 {
    "ExpandedHierarchyInLayout":"",
+   "commentid":"",
    "guistr":"# # String gsaved with Nlview 6.8.11  2018-08-07 bk=1.4403 VDI=40 GEI=35 GUI=JA:9.0 non-TLS
 #  -string -flagsOSRD
-preplace port UART -pg 1 -y -700 -defaultsOSRD
-preplace inst proc_sys_reset_0 -pg 1 -lvl 1 -y -700 -defaultsOSRD
+preplace port UART -pg 1 -y -710 -defaultsOSRD
+preplace port rst -pg 1 -y -180 -defaultsOSRD
+preplace port clk -pg 1 -y -540 -defaultsOSRD
+preplace inst Primary -pg 1 -lvl 2 -y -600 -defaultsOSRD
+preplace inst CPU -pg 1 -lvl 1 -y -530 -defaultsOSRD
 preplace inst util_vector_logic_0 -pg 1 -lvl 2 -y -930 -defaultsOSRD
-preplace inst blk_mem_gen_0 -pg 1 -lvl 4 -y -350 -defaultsOSRD
+preplace inst blk_mem_gen_0 -pg 1 -lvl 4 -y -280 -defaultsOSRD
 preplace inst blk_mem_gen_1 -pg 1 -lvl 4 -y -510 -defaultsOSRD
-preplace inst axi_interconnect_0 -pg 1 -lvl 2 -y -600 -defaultsOSRD
-preplace inst axi_uart16550_0 -pg 1 -lvl 4 -y -690 -defaultsOSRD
-preplace inst axi_interconnect_1 -pg 1 -lvl 3 -y -730 -defaultsOSRD
-preplace inst Top_0 -pg 1 -lvl 4 -y -170 -defaultsOSRD
-preplace inst axi_bram_ctrl_0 -pg 1 -lvl 3 -y -510 -defaultsOSRD -resize 235 116
-preplace inst axi_bram_ctrl_1 -pg 1 -lvl 3 -y -360 -defaultsOSRD
+preplace inst axi_uartlite_0 -pg 1 -lvl 4 -y -700 -defaultsOSRD
+preplace inst Reset -pg 1 -lvl 1 -y -700 -defaultsOSRD
+preplace inst EthBufCtrl -pg 1 -lvl 3 -y -360 -defaultsOSRD
+preplace inst BootROMCtrl -pg 1 -lvl 3 -y -510 -defaultsOSRD -resize 235 116
+preplace inst Peripheral -pg 1 -lvl 3 -y -730 -defaultsOSRD
 preplace netloc axi_interconnect_1_M01_AXI 1 3 1 N
 preplace netloc axi_bram_ctrl_0_BRAM_PORTA 1 3 1 N
-preplace netloc axi_interconnect_0_M02_AXI 1 2 1 820
-preplace netloc util_vector_logic_0_Res 1 2 1 830
-preplace netloc proc_sys_reset_0_mb_reset 1 1 1 500
-preplace netloc axi_uart16550_0_UART 1 4 1 N
-preplace netloc proc_sys_reset_0_interconnect_aresetn 1 1 2 510 -770 N
-preplace netloc S00_AXI_1 1 2 1 840
-preplace netloc proc_sys_reset_0_peripheral_aresetn 1 1 3 500 -440 860 -590 1160
-preplace netloc axi_interconnect_0_M01_AXI 1 2 1 840
+preplace netloc rst_1 1 0 1 -430
+preplace netloc Core_0_io_daxi 1 1 1 450
+preplace netloc axi_interconnect_0_M02_AXI 1 2 1 900
+preplace netloc util_vector_logic_0_Res 1 1 2 500 -390 910
+preplace netloc proc_sys_reset_0_mb_reset 1 0 2 -420 -800 450
+preplace netloc Core_0_io_iaxi 1 1 1 470
+preplace netloc proc_sys_reset_0_interconnect_aresetn 1 1 2 480 -790 920
+preplace netloc clk_1 1 0 4 -440 -450 490 -400 940 -870 1430
+preplace netloc S00_AXI_1 1 2 1 930
+preplace netloc axi_uartlite_0_UART 1 4 1 N
+preplace netloc proc_sys_reset_0_peripheral_aresetn 1 1 3 460 -410 950 -590 1430
+preplace netloc axi_interconnect_0_M01_AXI 1 2 1 920
 preplace netloc axi_bram_ctrl_1_BRAM_PORTA 1 3 1 N
-preplace netloc M00_ACLK_1 1 1 3 520 -430 850 -870 1160
-levelinfo -pg 1 -460 330 670 1010 1290 1440 -top -1100 -bot 360
+levelinfo -pg 1 -460 280 740 1280 1578 1730 -top -1100 -bot 360
 "
 }
 
