--- a/thinpad_top.srcs/sources_1/bd/meowrouter/ui/bd_c0078c9.ui
+++ b/thinpad_top.srcs/sources_1/bd/meowrouter/ui/bd_c0078c9.ui
@@ -1,37 +1,49 @@
 {
    "ExpandedHierarchyInLayout":"",
+   "PinnedBlocks":"/Peripheral|/Primary|/CPU|/BootROMCtrl|/EthBufCtrl|/UART|",
    "commentid":"",
    "guistr":"# # String gsaved with Nlview 6.8.11  2018-08-07 bk=1.4403 VDI=40 GEI=35 GUI=JA:9.0 non-TLS
 #  -string -flagsOSRD
-preplace port UART -pg 1 -y -710 -defaultsOSRD
-preplace port rst -pg 1 -y -180 -defaultsOSRD
-preplace port clk -pg 1 -y -540 -defaultsOSRD
-preplace inst Primary -pg 1 -lvl 2 -y -600 -defaultsOSRD
-preplace inst CPU -pg 1 -lvl 1 -y -530 -defaultsOSRD
-preplace inst util_vector_logic_0 -pg 1 -lvl 2 -y -930 -defaultsOSRD
-preplace inst blk_mem_gen_0 -pg 1 -lvl 4 -y -280 -defaultsOSRD
-preplace inst blk_mem_gen_1 -pg 1 -lvl 4 -y -510 -defaultsOSRD
-preplace inst axi_uartlite_0 -pg 1 -lvl 4 -y -700 -defaultsOSRD
-preplace inst Reset -pg 1 -lvl 1 -y -700 -defaultsOSRD
-preplace inst EthBufCtrl -pg 1 -lvl 3 -y -360 -defaultsOSRD
-preplace inst BootROMCtrl -pg 1 -lvl 3 -y -510 -defaultsOSRD -resize 235 116
-preplace inst Peripheral -pg 1 -lvl 3 -y -730 -defaultsOSRD
+preplace port rx_clk -pg 1 -y 590 -defaultsOSRD
+preplace port io_tx -pg 1 -y 570 -defaultsOSRD
+preplace port UART -pg 1 -y 160 -defaultsOSRD
+preplace port rt_clk -pg 1 -y 550 -defaultsOSRD
+preplace port io_rx -pg 1 -y 530 -defaultsOSRD
+preplace port tx_clk -pg 1 -y 610 -defaultsOSRD
+preplace port rst -pg 1 -y 250 -defaultsOSRD
+preplace port clk -pg 1 -y 10 -defaultsOSRD
+preplace inst Primary -pg 1 -lvl 2 -y 200 -defaultsOSRD
+preplace inst CPU -pg 1 -lvl 1 -y 90 -defaultsOSRD
+preplace inst BootROM -pg 1 -lvl 4 -y 340 -defaultsOSRD
+preplace inst UART -pg 1 -lvl 4 -y 170 -defaultsOSRD
+preplace inst EthBuf -pg 1 -lvl 4 -y 490 -defaultsOSRD
+preplace inst NRST -pg 1 -lvl 2 -y 430 -defaultsOSRD
+preplace inst Router -pg 1 -lvl 2 -y 570 -defaultsOSRD
+preplace inst Reset -pg 1 -lvl 1 -y 270 -defaultsOSRD
+preplace inst Peripheral -pg 1 -lvl 3 -y 140 -defaultsOSRD
+preplace inst EthBufCtrl -pg 1 -lvl 3 -y 480 -defaultsOSRD
+preplace inst BootROMCtrl -pg 1 -lvl 3 -y 340 -defaultsOSRD -resize 235 116
 preplace netloc axi_interconnect_1_M01_AXI 1 3 1 N
-preplace netloc axi_bram_ctrl_0_BRAM_PORTA 1 3 1 N
-preplace netloc rst_1 1 0 1 -430
-preplace netloc Core_0_io_daxi 1 1 1 450
-preplace netloc axi_interconnect_0_M02_AXI 1 2 1 900
-preplace netloc util_vector_logic_0_Res 1 1 2 500 -390 910
-preplace netloc proc_sys_reset_0_mb_reset 1 0 2 -420 -800 450
-preplace netloc Core_0_io_iaxi 1 1 1 470
-preplace netloc proc_sys_reset_0_interconnect_aresetn 1 1 2 480 -790 920
-preplace netloc clk_1 1 0 4 -440 -450 490 -400 940 -870 1430
-preplace netloc S00_AXI_1 1 2 1 930
-preplace netloc axi_uartlite_0_UART 1 4 1 N
-preplace netloc proc_sys_reset_0_peripheral_aresetn 1 1 3 460 -410 950 -590 1430
-preplace netloc axi_interconnect_0_M01_AXI 1 2 1 920
-preplace netloc axi_bram_ctrl_1_BRAM_PORTA 1 3 1 N
-levelinfo -pg 1 -460 280 740 1280 1578 1730 -top -1100 -bot 360
+preplace netloc axi_bram_ctrl_0_BRAM_PORTA 1 3 1 NJ
+preplace netloc rst_1 1 0 1 NJ
+preplace netloc Core_0_io_daxi 1 1 1 N
+preplace netloc axi_interconnect_0_M02_AXI 1 2 1 1030
+preplace netloc util_vector_logic_0_Res 1 1 2 710 -20 1040
+preplace netloc proc_sys_reset_0_mb_reset 1 0 2 0 170 670
+preplace netloc rtclk_1 1 0 2 NJ 550 N
+preplace netloc Router_io_tx 1 2 3 N 570 N 570 NJ
+preplace netloc Core_0_io_iaxi 1 1 1 N
+preplace netloc tx_clk_1 1 0 2 NJ 610 N
+preplace netloc proc_sys_reset_0_interconnect_aresetn 1 1 2 690 10 1070J
+preplace netloc clk_1 1 0 4 -10 10 680 -10 1060 -10 1390J
+preplace netloc io_rx_1 1 0 2 NJ 530 N
+preplace netloc S00_AXI_1 1 2 1 1050
+preplace netloc axi_uartlite_0_UART 1 4 1 NJ
+preplace netloc rx_clk_1 1 0 2 NJ 590 N
+preplace netloc proc_sys_reset_0_peripheral_aresetn 1 1 3 700 0 1080 0 1380J
+preplace netloc axi_interconnect_0_M01_AXI 1 2 1 1050
+preplace netloc axi_bram_ctrl_1_BRAM_PORTA 1 3 1 NJ
+levelinfo -pg 1 -30 500 870 1230 1530 1680 -top -450 -bot 1130
 "
 }
 
