--- a/thinpad_top.srcs/sources_1/bd/meowrouter/ui/bd_c0078c9.ui
+++ b/thinpad_top.srcs/sources_1/bd/meowrouter/ui/bd_c0078c9.ui
@@ -12,13 +12,15 @@ preplace port io_rx -pg 1 -y 530 -defaultsOSRD
 preplace port tx_clk -pg 1 -y 610 -defaultsOSRD
 preplace port rst -pg 1 -y 250 -defaultsOSRD
 preplace port clk -pg 1 -y 10 -defaultsOSRD
-preplace inst Primary -pg 1 -lvl 2 -y 200 -defaultsOSRD
+preplace port GPIO -pg 1 -y 20 -defaultsOSRD
+preplace inst Primary -pg 1 -lvl 2 -y 280 -defaultsOSRD
 preplace inst CPU -pg 1 -lvl 1 -y 90 -defaultsOSRD
 preplace inst BootROM -pg 1 -lvl 4 -y 340 -defaultsOSRD
 preplace inst UART -pg 1 -lvl 4 -y 170 -defaultsOSRD
 preplace inst EthBuf -pg 1 -lvl 4 -y 490 -defaultsOSRD
-preplace inst NRST -pg 1 -lvl 2 -y 430 -defaultsOSRD
-preplace inst Router -pg 1 -lvl 2 -y 570 -defaultsOSRD
+preplace inst NRST -pg 1 -lvl 2 -y 510 -defaultsOSRD
+preplace inst axi_gpio_0 -pg 1 -lvl 4 -y 20 -defaultsOSRD
+preplace inst Router -pg 1 -lvl 2 -y 650 -defaultsOSRD
 preplace inst Reset -pg 1 -lvl 1 -y 270 -defaultsOSRD
 preplace inst Peripheral -pg 1 -lvl 3 -y 140 -defaultsOSRD
 preplace inst EthBufCtrl -pg 1 -lvl 3 -y 480 -defaultsOSRD
@@ -26,24 +28,26 @@ preplace inst BootROMCtrl -pg 1 -lvl 3 -y 340 -defaultsOSRD -resize 235 116
 preplace netloc axi_interconnect_1_M01_AXI 1 3 1 N
 preplace netloc axi_bram_ctrl_0_BRAM_PORTA 1 3 1 NJ
 preplace netloc rst_1 1 0 1 NJ
-preplace netloc Core_0_io_daxi 1 1 1 N
-preplace netloc axi_interconnect_0_M02_AXI 1 2 1 1030
-preplace netloc util_vector_logic_0_Res 1 1 2 710 -20 1040
-preplace netloc proc_sys_reset_0_mb_reset 1 0 2 0 170 670
-preplace netloc rtclk_1 1 0 2 NJ 550 N
-preplace netloc Router_io_tx 1 2 3 N 570 N 570 NJ
-preplace netloc Core_0_io_iaxi 1 1 1 N
-preplace netloc tx_clk_1 1 0 2 NJ 610 N
-preplace netloc proc_sys_reset_0_interconnect_aresetn 1 1 2 690 10 1070J
-preplace netloc clk_1 1 0 4 -10 10 680 -10 1060 -10 1390J
-preplace netloc io_rx_1 1 0 2 NJ 530 N
-preplace netloc S00_AXI_1 1 2 1 1050
+preplace netloc Peripheral_M00_AXI 1 3 1 1370
+preplace netloc Core_0_io_daxi 1 1 1 700
+preplace netloc axi_interconnect_0_M02_AXI 1 2 1 1020
+preplace netloc util_vector_logic_0_Res 1 1 2 700 750 1050
+preplace netloc proc_sys_reset_0_mb_reset 1 0 2 0 170 650
+preplace netloc rtclk_1 1 0 2 NJ 550 640
+preplace netloc Router_io_tx 1 2 3 1060 570 N 570 NJ
+preplace netloc Core_0_io_iaxi 1 1 1 660
+preplace netloc tx_clk_1 1 0 2 NJ 610 620
+preplace netloc proc_sys_reset_0_interconnect_aresetn 1 1 2 670 90 1050J
+preplace netloc clk_1 1 0 4 -10 10 690 10 1040 -10 1380J
+preplace netloc io_rx_1 1 0 2 NJ 530 670
+preplace netloc S00_AXI_1 1 2 1 1030
+preplace netloc axi_gpio_0_GPIO 1 4 1 N
 preplace netloc axi_uartlite_0_UART 1 4 1 NJ
-preplace netloc rx_clk_1 1 0 2 NJ 590 N
-preplace netloc proc_sys_reset_0_peripheral_aresetn 1 1 3 700 0 1080 0 1380J
-preplace netloc axi_interconnect_0_M01_AXI 1 2 1 1050
+preplace netloc rx_clk_1 1 0 2 NJ 590 630
+preplace netloc proc_sys_reset_0_peripheral_aresetn 1 1 3 680 80 1020 0 1360J
+preplace netloc axi_interconnect_0_M01_AXI 1 2 1 1030
 preplace netloc axi_bram_ctrl_1_BRAM_PORTA 1 3 1 NJ
-levelinfo -pg 1 -30 500 870 1230 1530 1680 -top -450 -bot 1130
+levelinfo -pg 1 -30 450 860 1210 1510 1660 -top -450 -bot 1130
 "
 }
 
