--- a/thinpad_top.srcs/sources_1/bd/meowrouter/ui/bd_c0078c9.ui
+++ b/thinpad_top.srcs/sources_1/bd/meowrouter/ui/bd_c0078c9.ui
@@ -4,23 +4,24 @@
    "commentid":"",
    "guistr":"# # String gsaved with Nlview 6.8.11  2018-08-07 bk=1.4403 VDI=40 GEI=35 GUI=JA:9.0 non-TLS
 #  -string -flagsOSRD
-preplace port rx_clk -pg 1 -y 590 -defaultsOSRD
-preplace port io_tx -pg 1 -y 570 -defaultsOSRD
 preplace port UART -pg 1 -y 160 -defaultsOSRD
-preplace port rt_clk -pg 1 -y 550 -defaultsOSRD
-preplace port io_rx -pg 1 -y 530 -defaultsOSRD
-preplace port tx_clk -pg 1 -y 610 -defaultsOSRD
+preplace port SWITCH -pg 1 -y 10 -defaultsOSRD
+preplace port cpu_clk -pg 1 -y 10 -defaultsOSRD
 preplace port rst -pg 1 -y 250 -defaultsOSRD
-preplace port clk -pg 1 -y 10 -defaultsOSRD
-preplace port GPIO -pg 1 -y 20 -defaultsOSRD
+preplace port LED -pg 1 -y 30 -defaultsOSRD
+preplace port data_tx -pg 1 -y 570 -defaultsOSRD
+preplace port data_tx_clk -pg 1 -y 610 -defaultsOSRD
+preplace port data_clk -pg 1 -y 550 -defaultsOSRD
+preplace port data_rx_clk -pg 1 -y 590 -defaultsOSRD
+preplace port data_rx -pg 1 -y 530 -defaultsOSRD
 preplace inst Primary -pg 1 -lvl 2 -y 280 -defaultsOSRD
 preplace inst CPU -pg 1 -lvl 1 -y 90 -defaultsOSRD
 preplace inst BootROM -pg 1 -lvl 4 -y 340 -defaultsOSRD
 preplace inst UART -pg 1 -lvl 4 -y 170 -defaultsOSRD
 preplace inst EthBuf -pg 1 -lvl 4 -y 490 -defaultsOSRD
 preplace inst NRST -pg 1 -lvl 2 -y 510 -defaultsOSRD
-preplace inst axi_gpio_0 -pg 1 -lvl 4 -y 20 -defaultsOSRD
-preplace inst Router -pg 1 -lvl 2 -y 650 -defaultsOSRD
+preplace inst Board -pg 1 -lvl 4 -y 20 -defaultsOSRD
+preplace inst Router -pg 1 -lvl 2 -y 680 -defaultsOSRD
 preplace inst Reset -pg 1 -lvl 1 -y 270 -defaultsOSRD
 preplace inst Peripheral -pg 1 -lvl 3 -y 140 -defaultsOSRD
 preplace inst EthBufCtrl -pg 1 -lvl 3 -y 480 -defaultsOSRD
@@ -28,26 +29,27 @@ preplace inst BootROMCtrl -pg 1 -lvl 3 -y 340 -defaultsOSRD -resize 235 116
 preplace netloc axi_interconnect_1_M01_AXI 1 3 1 N
 preplace netloc axi_bram_ctrl_0_BRAM_PORTA 1 3 1 NJ
 preplace netloc rst_1 1 0 1 NJ
-preplace netloc Peripheral_M00_AXI 1 3 1 1370
-preplace netloc Core_0_io_daxi 1 1 1 700
-preplace netloc axi_interconnect_0_M02_AXI 1 2 1 1020
-preplace netloc util_vector_logic_0_Res 1 1 2 700 750 1050
-preplace netloc proc_sys_reset_0_mb_reset 1 0 2 0 170 650
-preplace netloc rtclk_1 1 0 2 NJ 550 640
-preplace netloc Router_io_tx 1 2 3 1060 570 N 570 NJ
-preplace netloc Core_0_io_iaxi 1 1 1 660
-preplace netloc tx_clk_1 1 0 2 NJ 610 620
-preplace netloc proc_sys_reset_0_interconnect_aresetn 1 1 2 670 90 1050J
-preplace netloc clk_1 1 0 4 -10 10 690 10 1040 -10 1380J
-preplace netloc io_rx_1 1 0 2 NJ 530 670
-preplace netloc S00_AXI_1 1 2 1 1030
+preplace netloc Peripheral_M00_AXI 1 3 1 1280
+preplace netloc axi_interconnect_0_M02_AXI 1 2 1 930
+preplace netloc Core_0_io_daxi 1 1 1 610
+preplace netloc util_vector_logic_0_Res 1 1 2 610 810 960
+preplace netloc proc_sys_reset_0_mb_reset 1 0 2 0 170 560
+preplace netloc rtclk_1 1 0 2 NJ 550 550
+preplace netloc Router_io_tx 1 2 3 970 570 N 570 NJ
+preplace netloc Core_0_io_iaxi 1 1 1 570
+preplace netloc tx_clk_1 1 0 2 NJ 610 530
+preplace netloc proc_sys_reset_0_interconnect_aresetn 1 1 2 580 90 960J
+preplace netloc clk_1 1 0 4 -10 10 600 10 950 -10 1290J
+preplace netloc axi_gpio_0_GPIO2 1 4 1 N
+preplace netloc io_rx_1 1 0 2 NJ 530 580
+preplace netloc S00_AXI_1 1 2 1 940
 preplace netloc axi_gpio_0_GPIO 1 4 1 N
 preplace netloc axi_uartlite_0_UART 1 4 1 NJ
-preplace netloc rx_clk_1 1 0 2 NJ 590 630
-preplace netloc proc_sys_reset_0_peripheral_aresetn 1 1 3 680 80 1020 0 1360J
-preplace netloc axi_interconnect_0_M01_AXI 1 2 1 1030
+preplace netloc rx_clk_1 1 0 2 NJ 590 540
+preplace netloc proc_sys_reset_0_peripheral_aresetn 1 1 3 590 80 930 0 1270J
+preplace netloc axi_interconnect_0_M01_AXI 1 2 1 940
 preplace netloc axi_bram_ctrl_1_BRAM_PORTA 1 3 1 NJ
-levelinfo -pg 1 -30 450 860 1210 1510 1660 -top -450 -bot 1130
+levelinfo -pg 1 -30 360 770 1120 1420 1570 -top -450 -bot 1130
 "
 }
-
+0
